MIHAI Update challenge configuration details

--- a/challenges/mihai-challenge/config.json
+++ b/challenges/mihai-challenge/config.json
@@ -1,6 +1,6 @@
 {
-  "id": "mihai-challenge",
-  "name": "Mihai Challenges",
-  "description": "Test your skills in decoding and encrypting messages! Learn about different cipher techniques and see if you can crack the codes."
+  "id": "cti-osint",
+  "name": "CTI OSINT Challenges",
+  "description": "Unmask threat actors through cutting-edge open-source intelligence reconnaissance! Deploy IP geolocation, WHOIS forensics, DNS enumeration, EXIF extraction, and VirusTotal analysis to hunt IOCs, track down artefacts, trace attack infrastructure, and attribute sophisticated campaigns. Real-world threat hunting toolkit for tomorrow's cyber security investigators."
 }
 
