MIHAI Fix typo in config.json key from ' ag' to 'flag'

--- a/challenges/mihai-challenge/ctfs/challenge-4/config.json
+++ b/challenges/mihai-challenge/ctfs/challenge-4/config.json
@@ -9,6 +9,6 @@
 "Tools like dnschecker.org can help.",
 "Look for the MX record and extract just the part before the rst dot."
 ],
-" ag": "FLAG{aspmx}"
+"flag": "FLAG{aspmx}"
 }
 
