--- a/challenges/mihai-challenge/ctfs/challenge-5/config.json
+++ b/challenges/mihai-challenge/ctfs/challenge-5/config.json
@@ -1,7 +1,7 @@
 {
 "id": "cti-exif-05",
 "title": "Hidden in the Photo",
-"description": "A threat actor posted this image online. The image contains GPS coordinates in its EXIF metadata. Use an online EXIF viewer to extract the latitude. The ag is the latitude rounded to 2 decimal places (format: XX.XX).",
+"description": "A threat actor posted this image online. The image contains GPS coordinates in its EXIF metadata. Use an online EXIF viewer to extract the latitude. The flag is the latitude rounded to 2 decimal places (format: XX.XX).",
 "points": 175,
 "links": "<a href=\"/assets/suspicious-photo.jpg.jpeg\">View Photo</a>",
 "hints": [
@@ -9,6 +9,6 @@
 "Websites like exifdata.com or jimpl.com can extract metadata.",
 "Look for 'GPS Latitude' in the results and round to 2 decimals."
 ],
-" ag": "FLAG{51.51}"
+"flag": "FLAG{51.51}"
 }
 
