Fix typo in challenge description

--- a/challenges/mihai-challenge/ctfs/challenge-4/config.json
+++ b/challenges/mihai-challenge/ctfs/challenge-4/config.json
@@ -1,7 +1,7 @@
 {
 "id": "cti-dns-04",
 "title": "The Name Server Mystery",
-"description": "A threat actor is using the domain 'https://tryhackme.com/'. Use an online DNS lookup tool to nd the AMERICAN MX (Mail Exchange) record for this domain. The ag is the mail server name (without the domain part).",
+"description": "A threat actor is using the domain 'https://tryhackme.com/'. Use an online DNS lookup tool to nd the AMERICAN MX (Mail Exchange) record for this domain. The flag is the mail server name (without the domain part).",
 "points": 150,
 "links": ["https://your-ctf-site.com/cti-challenge4"],
 "hints": [
