--- a/challenges/mihai-challenge/ctfs/challenge-7/config.json
+++ b/challenges/mihai-challenge/ctfs/challenge-7/config.json
@@ -1,7 +1,7 @@
 {
 "id": "cti-breach-07",
 "title": "Have I Been Compromised?",
-"description": "An employee's email 'pinkpony@gmail.com' may have been in a data breach. Use HaveIBeenPwned (haveibeenpwned.com) to check. The ag is the name of the SECOND breach listed (if any) in lowercase with underscores instead of spaces.",
+"description": "An employee's email 'pinkpony@gmail.com' may have been in a data breach. Use HaveIBeenPwned (haveibeenpwned.com) to check. The flag is the name of the SECOND breach listed (if any) in lowercase with underscores instead of spaces.",
 "points": 100,
 "links": ["https://your-ctf-site.com/cti-challenge7"],
 "hints": [
@@ -9,5 +9,5 @@
 "Look at the 'Breaches you were pwned in' section.",
 "Format: FLAG{breach_name_here} in lowercase."
 ],
-" ag": "FLAG{hot_topic}"
+"flag": "FLAG{hot_topic}"
 }
