--- a/challenges/mihai-challenge/ctfs/challenge-6/config.json
+++ b/challenges/mihai-challenge/ctfs/challenge-6/config.json
@@ -1,13 +1,12 @@
 {
-"id": "cti-username-06",
-"title": "The Digital Footprint",
-"description": "We identified a suspicious username: 'cyberspyfromcanterbury'. Use the 'namechk.com' tool to nd out how many platforms this username appears on from every website they check for. The flag is that number.",
-"points": 125,
-"links": ["https://your-ctf-site.com/cti-challenge6"],
-"hints": [
-"Search for 'username checker' or 'username search tool'.",
-"Count only the platforms where the username exists (shown in green/found)."
-],
-"flag": "FLAG{4}"
+  "id": "cti-username-06",
+  "title": "The Digital Footprint",
+  "description": "We identified a suspicious username: 'cyberspyfromcanterbury'. Use the 'namechk.com' tool to find out how many platforms this username appears on from every website they check for. The flag is that number.",
+  "points": 125,
+  "links": ["https://your-ctf-site.com/cti-challenge6"],
+  "hints": [
+    "Search for 'username checker' or 'username search tool'.",
+    "Count only the platforms where the username exists (shown in green/found)."
+  ],
+  "flag": "FLAG{4}"
 }
-
