--- a/challenges/shawn-challenge/ctfs/challenge-1/config.json
+++ b/challenges/shawn-challenge/ctfs/challenge-1/config.json
@@ -7,6 +7,6 @@
 "hints": [ 
 "Try using a tool such as VirusTotal" 
 ], 
-"flag": "FLAG{MY}" 
+"flag": "FLAG{111bc461-1ca8-43c6-97ed-911e0e69fdf8.dll}" 
 } 
 
