--- a/challenges/shawn-challenge/ctfs/challenge-3/config.json
+++ b/challenges/shawn-challenge/ctfs/challenge-3/config.json
@@ -7,6 +7,6 @@
 "hints": [
 "Within VirusTotal have a look at either the relations or behaviour tab"
 ],
-"flag": "FLAG{MY}"
+"flag": "FLAG{2}"
 }
 
