--- a/challenges/shawn-challenge/ctfs/challenge-5/config.json
+++ b/challenges/shawn-challenge/ctfs/challenge-5/config.json
@@ -7,6 +7,6 @@
 "hints": [
 "Take a look throughout the years for activity on the account. The value you find may need to be decoded from a popular encoding type"
 ],
-"flag": "FLAG{MY}"
+"flag": "FLAG{PicassoBaguette99}"
 }
 
