--- a/challenges/shawn-challenge/ctfs/challenge-6/config.json
+++ b/challenges/shawn-challenge/ctfs/challenge-6/config.json
@@ -7,5 +7,5 @@
 "hints": [
 "Take a look throughout the years for activity on the account."
 ],
-"flag": "FLAG{MY}"
+"flag": "FLAG{aJFRaLHjMXvYZgLPwiJkroYLGRkNBW}"
 }
