--- a/challenges/shawn-challenge/ctfs/challenge-7/config.json
+++ b/challenges/shawn-challenge/ctfs/challenge-7/config.json
@@ -7,6 +7,6 @@
 "hints": [
 "Have a look at their followers"
 ],
-"flag": "FLAG{MY}"
+"flag": "FLAG{https://www.linkedin.com/in/sanjay-sharma-cisa-45b989a2/}"
 }
 
