--- a/challenges/umuthan-challenge/ctfs/challenge-1/config.json
+++ b/challenges/umuthan-challenge/ctfs/challenge-1/config.json
@@ -1,10 +1,9 @@
-{ 
-"id": "inspect-01", 
-"title": "Hidden in Plain Sight", 
-"description": "Sometimes the answers are right in front of us, but we need the right tools to see them. We've hidden a flag inside the CSS styles of this page's background.", 
-"points": 50, 
-"links": ["https://your-ctf-site.com/challenge1"], 
-"hints": ["Press F12 or right-click and select 'Inspect'.", "Have you checked the 'Styles' tab in the developer tools?"], 
-"flag": "FLAG{web_inspect_pro}" 
+{
+  "id": "inspect-01",
+  "title": "Hidden in Plain Sight",
+  "description": "Sometimes the answers are right in front of us, but we need the right tools to see them. We've hidden a flag inside the CSS styles of this page's background.",
+  "points": 50,
+  "links": ["index.html"],
+  "hints": ["Press F12 or right-click and select 'Inspect'.", "Have you checked the 'Styles' tab in the developer tools?"],
+  "flag": "FLAG{web_inspect_pro}"
 }
-
