--- a/challenges/umuthan-challenge/ctfs/challenge-4/config.json
+++ b/challenges/umuthan-challenge/ctfs/challenge-4/config.json
@@ -1,10 +1,14 @@
-{ 
-"id": "js-obf-04", 
-"title": "Jumbled Code", 
-"description": "A function runs when you click a button, but the code is unreadable. What does `String.fromCharCode(70, 76, 65, 71...)` mean?", 
-"points": 150, 
-"links": ["https://your-ctf-site.com/challenge4"], 
-"hints": ["Use CyberChef with the 'From Charcode' operation.", "Paste the  comma-separated numbers into the input field."], 
-"flag": "FLAG{js_is_readable}" 
-} 
-
+{
+  "id": "js-obf-04",
+  "title": "Jumbled Code",
+  "description": "A function runs when you click a button, but the code is unreadable. What does `String.fromCharCode(70, 76, 65, 71...)` mean?",
+  "points": 150,
+  "links": [
+    "index.html"
+  ],
+  "hints": [
+    "Use CyberChef with the 'From Charcode' operation.",
+    "Paste the comma-separated numbers into the input field."
+  ],
+  "flag": "FLAG{js_is_readable}"
+}
