--- a/challenges/umuthan-challenge/ctfs/challenge-9/config.json
+++ b/challenges/umuthan-challenge/ctfs/challenge-9/config.json
@@ -1,9 +1,14 @@
-{ 
-"id": "logic-09", 
-"title": "The Logic Gate", 
-"description": "The script checks if `isAuthorized` is true. We've set it to false. Can you override the system logic using the console?", 
-"points": 175, 
-"links": ["https://your-ctf-site.com/challenge9"], 
-"hints": ["Type `isAuthorized = true` into the console and press Enter.", "After changing the value, click the 'Verify' button on the page."], 
-"flag": "FLAG{logic_hacker}" 
+{
+  "id": "logic-09",
+  "title": "The Logic Gate",
+  "description": "The script checks if `isAuthorized` is true. We've set it to false. Can you override the system logic using the console?",
+  "points": 175,
+  "links": [
+    "index.html"
+  ],
+  "hints": [
+    "Type `isAuthorized = true` into the console and press Enter.",
+    "After changing the value, click the 'Verify' button on the page."
+  ],
+  "flag": "FLAG{logic_hacker}"
 }
