Update challenge description for clarity

--- a/challenges/daniel-challenge/config.json
+++ b/challenges/daniel-challenge/config.json
@@ -1,6 +1,6 @@
 {
   "id": "daniel-challenge",
   "name": "Daniels Challenges",
-  "description": "Test your skills in decoding and encrypting messages! Learn about different cipher techniques and see if you can crack the codes."
+  "description": "The system is locked down. Break through layers of encryption, decode hidden messages, and capture the flags before time runs out."
 }
 
