--- a/challenges/umuthan-challenge/config.json
+++ b/challenges/umuthan-challenge/config.json
@@ -1,6 +1,6 @@
 {
   "id": "umuthan-challenge",
   "name": "Umuthan Challenge",
-  "description": "Test your skills in decoding and encrypting messages! Learn about different cipher techniques and see if you can crack the codes."
+  "description": "Think like a hacker by solving puzzles, decoding hidden messages, and breaking layers of encryption to capture each flag."
 }
 
