--- a/challenges/shawn-challenge/ctfs/challenge-5/config.json
+++ b/challenges/shawn-challenge/ctfs/challenge-5/config.json
@@ -3,7 +3,7 @@
 "title": "Github Forensics",
 "description": "A client has requested assistance after a network compromise caused a full outage. Preliminary forensic analysis shows the attack originated from a single user account, indicating a potential insider threat. Investigate the incident to identify the insider and determine the actions taken during the attack. You have been given the compromised user's github profile - https://github.com/EMarseille99 What plaintext password was discovered in the user’s repositories during the investigation?",
 "points": 75,
-"links": ["https://your-ctf-site.com/OSINT-challenge-5"],
+"links": ["https://github.com/EMarseille99"],
 "hints": [
 "Take a look throughout the years for activity on the account. The value you find may need to be decoded from a popular encoding type"
 ],
