--- a/challenges/shawn-challenge/ctfs/challenge-8/config.json
+++ b/challenges/shawn-challenge/ctfs/challenge-8/config.json
@@ -1,17 +1,12 @@
 {
-  "id": "caesar-cipher",
-  "title": "Caesar Cipher",
-  "description": "The Caesar cipher is one of the earliest known encryption techniques. It works by shifting each letter in the alphabet by a fixed number of positions. For example, with a shift of 3, 'A' becomes 'D', 'B' becomes 'E', and so on.\n\nYour task: Decode the following encrypted message:\n\nzhoogrqhwhdp\n\nHint: Try different shift values! The flag format is FLAG{decrypted_text}",
-  "points": 50,
-  "photo": null,
-  "links": [
-    "https://en.wikipedia.org/wiki/Caesar_cipher"
-  ],
-  "hints": [
-    "The shift might be a number between 1 and 25",
-    "Try shifting backwards through the alphabet",
-    "Count how many positions each letter has moved"
-  ],
-  "flag": "FLAG{welldoneteam}"
+"id": "OSINT-08",
+"title": "Github Forensics",
+"description": "A client has requested assistance after a network compromise caused a full outage. Preliminary forensic analysis shows the attack originated from a single user account, indicating a potential insider threat. Investigate the incident to identify the insider and determine the actions taken during the attack. You have been given the compromised user's github profile - https://github.com/EMarseille99 One of the account's followers is based in Kanpar. Can you find their linkedin profile?",
+"points": 75,
+"links": ["https://github.com/EMarseille99"],
+"hints": [
+"Have a look at their followers"
+],
+"flag": "FLAG{https://www.linkedin.com/in/sanjay-sharma-cisa-45b989a2/}"
 }
 
