Update challenge name in config.json

--- a/challenges/cryptography-challenge/config.json
+++ b/challenges/cryptography-challenge/config.json
@@ -1,6 +1,6 @@
 {
   "id": "cryptography-challenge",
-  "name": "Cryptography Challenge",
+  "name": "Morning 1",
   "description": "Test your skills in decoding and encrypting messages! Learn about different cipher techniques and see if you can crack the codes."
 }
 
