Modify challenge description and update links
Updated the description and links for the challenge.

--- a/challenges/mihai-challenge/ctfs/challenge-5/config.json
+++ b/challenges/mihai-challenge/ctfs/challenge-5/config.json
@@ -1,9 +1,9 @@
 {
   "id": "cti-exif-05",
   "title": "Hidden in the Photo",
-  "description": "A threat actor posted this image online. The image contains GPS coordinates in its EXIF metadata. Use an online EXIF viewer to extract the latitude. The flag is the latitude rounded to 2 decimal places (format: XX.XX).",
+  "description": "A threat actor posted this image online. The image contains GPS coordinates in its EXIF metadata. Use an online EXIF viewer to extract the latitude. The flag is the latitude rounded to 2 decimal places (format: XX.XX). Download the 'CTF_Platform_Files' zip file from the provided link and open the 'suspicious-photo.jpg' file.",
   "points": 175,
-  "links": ["https://your-ctf-site.com/assets/suspicious-photo.jpg"],
+  "links": ["https://cyber.kent.ac.uk/events/ACE-Cyber-Security-Competition@Kent-20260224/CTF_Platform_Files.zip"],
   "hints": [
     "Search for 'EXIF viewer' or 'online EXIF data reader'.",
     "Websites like exifdata.com or jimpl.com can extract metadata.",
