--- a/challenges/Viktor-challenge/ctfs/challenge-4/config.json
+++ b/challenges/Viktor-challenge/ctfs/challenge-4/config.json
@@ -1,5 +1,5 @@
 {
-"id": "cti-dns-04b",
+"id": "challenge-4",
 "title": "Mail Server Recon",
 "description": "A suspicious domain 'tryhackme.org' has been identified. Use a DNS lookup tool to find its primary MX record. Extract only the mail server name (before the first dot).",
 "points": 150,
