--- a/challenges/Viktor-challenge/ctfs/challenge-6/config.json
+++ b/challenges/Viktor-challenge/ctfs/challenge-6/config.json
@@ -1,5 +1,5 @@
 {
-"id": "cti-username-06b",
+"id": "challenge-6",
 "title": "Online Footprint",
 "description": "The username 'silentobserver22' has been linked to suspicious activity. Use a username checking tool to determine how many platforms show this username as existing.",
 "points": 125,
