--- a/challenges/Viktor-challenge/ctfs/challenge-10/config.json
+++ b/challenges/Viktor-challenge/ctfs/challenge-10/config.json
@@ -1,5 +1,5 @@
 {
-"id": "cti-final-10b",
+"id": "challenge-10",
 "title": "Mini OSINT Chain",
 "description": "Investigate the domain 'academy-example.org'. Step 1: Use WHOIS to identify the registrar. Step 2: Use DNS lookup to find the first IPv4 A record. Step 3: Use IP geolocation to identify the country code. Combine the results as REGISTRAR_IP_COUNTRY (uppercase, registrar = first word only).",
 "points": 300,
