--- a/challenges/daniel-challenge/ctfs/Challenge-1/config.json
+++ b/challenges/daniel-challenge/ctfs/Challenge-1/config.json
@@ -1,5 +1,5 @@
 {
-  "id": "rot13-warmup",
+  "id": "challenge-1",
   "title": "ROT13 Warm-Up",
   "description": "ROT13 is a simple letter substitution cipher that replaces a letter with the 13th letter after it in the alphabet.\n\nYour task: Decode the following message:\n\n ebg13_vf_rnfl \n\n The flag format is FLAG{decrypted_text}",
   "points": 75,
