--- a/challenges/daniel-challenge/ctfs/challenge-2/config.json
+++ b/challenges/daniel-challenge/ctfs/challenge-2/config.json
@@ -1,5 +1,5 @@
 {
-  "id": "base64-basics",
+  "id": "challenge-2",
   "title": "Base64 Basics",
   "description": "Base64 is a common encoding scheme used to represent binary data in ASCII text.\n\nYour task: Decode the following string:\n\nRkxBR3tiYXNlNjRfZGVjb2RlZH0=\n\n The flag format is FLAG{decrypted_text}",
   "points": 100,
