--- a/challenges/daniel-challenge/ctfs/challenge-5/config.json
+++ b/challenges/daniel-challenge/ctfs/challenge-5/config.json
@@ -1,5 +1,5 @@
 {
-  "id": "caesar-reloaded",
+  "id": "challenge-5",
   "title": "Caesar Cipher Reloaded",
   "description": "The Caesar cipher shifts letters by a fixed amount, but this time the shift is less obvious.\n\nYour task: Decode the following message:\n\nkrod{fdhvdu_flskhu}\n\n The flag format is FLAG{decrypted_text}",
   "points": 175,
