--- a/challenges/daniel-challenge/ctfs/challenge-7/config.json
+++ b/challenges/daniel-challenge/ctfs/challenge-7/config.json
@@ -1,5 +1,5 @@
 {
-  "id": "base64-caesar",
+  "id": "challenge-7",
   "title": "Layered Encoding",
   "description": "Sometimes data is encoded multiple times.\n\nYour task: Decode the following message:\n\nSkxCR3tkbHF4aF9sYXllcn0=\n\n The flag format is FLAG{decrypted_text}",
   "points": 250,
