--- a/challenges/daniel-challenge/ctfs/challenge-8/config.json
+++ b/challenges/daniel-challenge/ctfs/challenge-8/config.json
@@ -1,5 +1,5 @@
 {
-  "id": "xor-single-key",
+  "id": "challenge-8",
   "title": "XOR With a Twist",
   "description": "XOR encryption uses a key to scramble data.\n\nYour task: Decrypt the following hex string using a single-byte XOR key:\n\n1d0f141f3b0e1c3a1d0f1c0e3a1b\n\n The flag format is FLAG{decrypted_text}",
   "points": 300,
